--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.11.10",
+    "fast-xml-parser": "^4.3.2",
+    "m3u8-parser": "^7.1.0",
     "node-fetch": "^3.3.2"
   }
 }
