--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dayjs": "^1.11.10",
     "fast-xml-parser": "^4.3.2",
+    "fluent-ffmpeg": "^2.1.2",
     "m3u8-parser": "^7.1.0",
     "node-fetch": "^3.3.2"
   }
